# sfbpe

./: CMakeLists.txt  README.md
src/: box.cpp  box.h  constraint.h  drawing.cpp  drawing.h  main.cpp  pgs.cpp  pgs.h  solver.cpp  solver.h
